# wgo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example
.github/instructions/: instructions.instructions.md
.github/workflow/: release.yaml
.github/workflows/: release.yaml
assets/: icon.icns
src/: app.rs  audio_recorder.rs  config.rs  groq_request.rs  icon.rs  main.rs  menu.rs  microphone_permission.rs  shortcut_detector.rs  transcription_history.rs  utils.rs
test_material/: test_video.m4a  test_video.mkv  test_video.mov  test_video.webm
