[package]
name = "wgo"
version = "1.0.0"
edition = "2021"
authors = ["Elia Salerno"]
description = "Lightweight voice transcription tool with global hotkeys and Groq Whisper API"
license = "MIT"
repository = "https://github.com/salernoelia/wgo"
keywords = ["transcription", "audio", "whisper", "voice", "recording"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "wgo"
path = "src/main.rs"

[dependencies]
rdev = "0.5.3"
cpal = "0.16.0"
hound = "3.5"
reqwest = { version = "0.12.20", features = ["blocking", "multipart", "json"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
arboard = "3.5"

