[package]
name = "wgo"
version = "1.0.7"
edition = "2021"
authors = ["Elia Salerno"]
description = "Lightweight voice transcription tool with global hotkeys and Groq Whisper API"
license = "MIT"
repository = "https://github.com/salernoelia/wgo"
keywords = ["transcription", "audio", "whisper", "voice", "recording"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "wgo"
path = "src/main.rs"

[dependencies]
rdev = { version = "0.5.3", features = ["unstable_grab"] }
cpal = "0.16.0"
hound = "3.5"
reqwest = { version = "0.12.20", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.5"
eframe = "0.31"
egui = "0.31"
dirs = "5.0"
chrono = { version = "0.4", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[dev-dependencies]
tempfile = "3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/DEBUG:NONE"]

[profile.release]
debug = false
strip = "symbols"
