[package]
name = "wgo"
version = "1.1.5"
edition = "2021"
authors = ["Elia Salerno"]
description = "Lightweight voice transcription tool with global hotkeys and Groq Whisper API"
license = "MIT"
repository = "https://github.com/salernoelia/wgo"
keywords = ["transcription", "audio", "whisper", "voice", "recording"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "wgo"
path = "src/main.rs"

[dependencies]
urlencoding = "2"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
cpal = "0.16.0"
hound = "3.5"
reqwest = { version = "0.12.20", features = ["blocking", "multipart", "json"] }
self-replace = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.5"
eframe = "0.31"
egui = "0.31"
dirs = "5.0"
chrono = { version = "0.4", default-features = true }
rust_ffmpeg = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[patch.crates-io]
# rdev's macOS CGEventTap callback calls TISCopyCurrentKeyboardInputSource, which
# asserts it runs on the main dispatch queue and aborts() otherwise. Our patched
# version skips create_string_for_key on background threads (returns name = None).
rdev = { path = "vendor/rdev" }

[dev-dependencies]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/DEBUG:NONE"]

[profile.release]
debug = false
strip = "symbols"
